<resources>
    <string name="app_name">AndroidWerkstuk</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="logout">Logout</string>
    <string name="redirectToMaps">View in google maps</string>


    //User
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="alreadyHaveAccount">Already Have an account?</string>
    <string name="userUpdated">User is updated successfully</string>
    <string name="userLogged">User Logged in successfully</string>
    <string name="userRegistered">User is registered successfully</string>
    <string name="userSubscribed">Subscribed on this event</string>
    <string name="userUnsubscribed">Unsubscribed on this event</string>

    //Validation
    <string name="notEmpty">Cannot be empty</string>
    <string name="passwordGreater">Password must be greater than 6 characters</string>
    <string name="passwordsNotMatch">Passwords does not match</string>


    //Event
    <string name="updateEvent">Update Event</string>
    <string name="eventCreated">Event is Created successfully</string>
    <string name="eventUpdated">Event is Updated successfully</string>
    <string name="eventDeleted">Event is Deleted</string>
    <string name="createEvent">Create New Event</string>
    <string name="subscribedEvents">Subscribed Events</string>
    <string name="createdEvents">Created Events</string>
    <string name="search">Search</string>
    <string name="searchForEvents">Search for Events</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="numberOfParticipants">Number of participants</string>
    <string name="emailCreator">Email Creator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="beginDate">Begin Date</string>
    <string name="endDate">End Date</string>
    <string name="street">Street</string>
    <string name="houseNr">HouseNr</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>

</resources>