<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UpdateEventActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/updateEvent"
            android:textAlignment="center"
            android:textColor="#dfc15e"


            android:textSize="30dp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginTop="35dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="#dfc15e"
            />

        <EditText
            android:id="@+id/textfield_title_updateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="#dfc15e"
            />

        <EditText
            android:id="@+id/textfield_description_updateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginDate"

            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="#dfc15e"
            />

        <EditText
            android:id="@+id/textfield_beginDate_updateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="text"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endDate"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="#dfc15e"
            />

        <EditText
            android:id="@+id/textfield_endDate_updateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="text"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/street"

            android:layout_marginHorizontal="30dp"
            android:textColor="#dfc15e"
            />

        <EditText
            android:id="@+id/textfield_street_updateEvent"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/houseNr"

            android:layout_marginHorizontal="30dp"
            android:textColor="#dfc15e"
            />

        <EditText
            android:id="@+id/textfield_huisNr_updateEvent"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"

            android:layout_marginHorizontal="30dp"
            android:textColor="#dfc15e"
            />

        <EditText
            android:id="@+id/textfield_city_updateEvent"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zipcode"

            android:layout_marginHorizontal="30dp"
            android:textColor="#dfc15e"
            />

        <EditText
            android:id="@+id/textfield_zipcode_updateEvent"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            />



        <Button
            android:id="@+id/button_updateBtn_updateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="#dfc15e"
            android:text="@string/update"  />


    </LinearLayout>
</ScrollView>