<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CreateNewEventActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/createEvent"
                android:textAlignment="center"
                android:textColor="#dfc15e"


                android:textSize="30dp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="30dp"
                android:textColor="#dfc15e"
                />

            <EditText
                android:id="@+id/textfield_title_createEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"

                android:layout_marginHorizontal="30dp"
                android:textColor="#dfc15e"
                />

            <EditText
                android:id="@+id/textfield_beschrijving_createEvent"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beginDate"
                android:layout_marginHorizontal="30dp"
                android:textColor="#dfc15e"
                />

            <EditText
                android:id="@+id/textfield_beginDate_createEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endDate"
                android:layout_marginHorizontal="30dp"
                android:textColor="#dfc15e"
                />

            <EditText
                android:id="@+id/textfield_endDate_createEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street"

                android:layout_marginHorizontal="30dp"
                android:textColor="#dfc15e"
                />

            <EditText
                android:id="@+id/textfield_street_createEvent"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/houseNr"

                android:layout_marginHorizontal="30dp"
                android:textColor="#dfc15e"
                />

            <EditText
                android:id="@+id/textfield_huisNr_createEvent"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"

                android:layout_marginHorizontal="30dp"
                android:textColor="#dfc15e"
                />

            <EditText
                android:id="@+id/textfield_city_createEvent"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zipcode"

                android:layout_marginHorizontal="30dp"
                android:textColor="#dfc15e"
                />

            <EditText
                android:id="@+id/textfield_zipcode_createEvent"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"
                />

            <Button
                android:id="@+id/button_createNewEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:backgroundTint="#dfc15e"
                android:layout_marginHorizontal="30dp"/>


        </LinearLayout>

    </ScrollView>
